force-app/main/default/objects/DataInsight__c/DataInsight__c.object-meta.xml
<CustomObject>
    <label>Data Insight</label>
    <nameField>
        <displayFormat>DI-{00000000}</displayFormat>
        <label>Data Insight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>