force-app/main/default/objects/DataInsight__c/fields/Calculation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Timestamp__c</fullName>
    <label>Calculation Timestamp</label>
    <type>DateTime</type>
</CustomField>