force-app/main/default/objects/DataInsight__c/fields/Relevance__c.field-meta.xml
<CustomField>
    <fullName>Relevance__c</fullName>
    <label>Relevance</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>