force-app/main/default/objects/DataInsight__c/fields/Subject_Range_End__c.field-meta.xml
<CustomField>
    <fullName>Subject_Range_End__c</fullName>
    <label>Subject Range End</label>
    <type>DateTime</type>
</CustomField>