force-app/main/default/objects/DataInsight__c/fields/Subject_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Subject_Range_Start__c</fullName>
    <label>Subject Range Start</label>
    <type>DateTime</type>
</CustomField>