force-app/main/default/objects/DataInsight__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value (JSON)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>