force-app/main/default/objects/DataInsight__c/fields/Venue_SFId__c.field-meta.xml
<CustomField>
    <fullName>Venue_SFId__c</fullName>
    <label>MyOb Venue</label>
    <referenceTo>MyObVenue__c</referenceTo>
    <relationshipLabel>Data Insights</relationshipLabel>
    <relationshipName>Data_Insights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>